# benchmarking

./: .gitignore
.github/workflows/: benchmark.yml
apps/api/: Makefile  pyproject.toml
apps/api/scripts/: run_automated_benchmark.py
apps/api/src/: main.py
apps/api/src/core/: config.py  database.py  runner.py
apps/api/src/data/: amount.py  chain.py  user.py
apps/api/src/models/: __init__.py  models.py
apps/api/src/providers/: base.py
apps/api/src/providers/gluex/: __init__.py  config.py
apps/api/src/providers/liqdswap/: __init__.py  config.py
apps/api/src/routers/: analytics.py  benchmarks.py  health.py
apps/web/: next.config.ts  package.json  postcss.config.mjs  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx  view.tsx
apps/web/src/components/brand/: logo.tsx
apps/web/src/components/ui/: footer.tsx  select.tsx
apps/web/src/config/: env.ts  index.ts  site.ts
apps/web/src/data/: chains.ts
apps/web/src/hooks/: index.ts
apps/web/src/hooks/use-clipboard/: use-clipboard.ts
apps/web/src/hooks/use-countdown/: use-countdown.ts
apps/web/src/hooks/use-counter/: use-counter.ts
apps/web/src/hooks/use-debounced-callback/: use-debounced-callback.ts
apps/web/src/hooks/use-disclosure/: use-disclosure.ts
apps/web/src/hooks/use-event-listener/: use-event-listener.ts
apps/web/src/interfaces/: global.d.ts
apps/web/src/libs/: cache.ts  hash.ts  supabase.ts
apps/web/src/store/: hooks.ts  index.ts  provider.tsx
apps/web/src/styles/: global.css
apps/web/src/utils/: index.ts
apps/web/src/validations/: benchmark.ts
(+53 files in other folders)
